--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-    
+    <!-- Inizio Header -->
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt=""><!--
+     --><img src="img/pexels-bill-emrich-230794-1.jpg" alt=""><!--
+     --><img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        <hr>
+    </header>
+    <!-- Fine Header  -->
 </body>
 
 </html>
