added expenses section

--- a/index.html
+++ b/index.html
@@ -8,15 +8,53 @@
 </head>
 
 <body>
+    
     <!-- Inizio Header -->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
-        <img src="img/pexels-bill-emrich-230794-0.jpg" alt=""><!--
-     --><img src="img/pexels-bill-emrich-230794-1.jpg" alt=""><!--
-     --><img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London"><!--
+     --><img src="img/pexels-bill-emrich-230794-1.jpg" alt="London"><!--
+     --><img src="img/pexels-bill-emrich-230794-2.jpg" alt="London">
         <hr>
     </header>
-    <!-- Fine Header  -->
+    <!-- Fine Header -->
+
+    <!-- Inizio Main -->
+        <main>
+            <!-- Sezione Spese -->
+            <section>
+                <h2>Le mie spese</h2>
+                <table>
+                    <tr>
+                        <th><strong>Numero</strong></th>
+                        <th><strong>Descrizione</strong></th>
+                        <th><strong>Costo</strong></th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120	&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120	&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120	&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>320 &euro;</td>
+                    </tr>
+                </table>
+                <hr>
+            </section>
+        </main>
+    <!-- Fine Main -->
 </body>
 
 </html>
