--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
                 </table>
                 <hr>
             </section>
+            <!-- Sezione "cose da fare" -->
+            <section>
+                <h3>Cose da fare</h3>
+                <ul>
+                    <li>Visitare la Tower of London &#10007;</li>
+                    <li>Visitare greenwich &#10003;</li>
+                    <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+                    <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
+                </ul>
+                <hr>
+            </section>
         </main>
     <!-- Fine Main -->
 </body>
