--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
                 </ul>
                 <hr>
             </section>
+            <!-- Sezione info utili -->
+            <section>
+                <h3>Info utili:</h3>
+                <ol>
+                    <li>Numeri utili di emergenza</li>
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Numero polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
+                    </ul>
+                </ol>
+                <ol>
+                    <li>Hotel</li>
+                    <ul>
+                        <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </ol>
+                <ol>
+                    <li>Aereo</li>
+                    <ul>
+                        <li><strong>Volo di andata</strong>: Y1234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di ritorno</strong>: Y1236X, ore 18.30 da London Heathrow</li>
+                    </ul>
+                </ol>
+                <hr>
+            </section>
         </main>
     <!-- Fine Main -->
 </body>
